--- a/templates/histogramme.html
+++ b/templates/histogramme.html
@@ -1,9 +1,9 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Graphique</title>
+    <title>histogramme</title>
  </head>  
 <body>
-    <h2>Mon Graphique</h2>
+    <h2>Mon histogramme</h2>
 </body>
 </html>
