--- a/templates/histogramme.html
+++ b/templates/histogramme.html
@@ -25,7 +25,7 @@
       curveType: 'function',
       legend: { position: 'bottom' }
     };
-    var chart = new google.visualization.histogramme(document.getElementById('chart_div'));
+    var chart = new google.visualization.Histogramme(document.getElementById('chart_div'));
     chart.draw(dataTable, options);
   }
   // Récupération de données depuis notre API /tawarano/
